[package]
name = "pyde-crypto-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for Pyde cryptographic primitives"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Only pyde-crypto — pure Rust, no C/system deps.
# pyde-account and pyde-tx excluded (they pull in rocksdb/blake2b-rs via pyde-state).
# Address derivation and tx hash reimplemented inline using poseidon2_hash.
pyde-crypto = { path = "../crypto" }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true

[lints]
workspace = true
