[package]
name = "pyde-crypto-wasm"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
description = "WASM bindings for Pyde cryptographic primitives"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Only pyde-crypto — pure Rust, no C/system deps.
# pyde-account and pyde-tx excluded (they pull in rocksdb/blake2b-rs via pyde-state).
# Address derivation and tx hash reimplemented inline using poseidon2_hash.
pyde-crypto = { path = "../pyde-crypto" }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
serde_json = "1"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true

# Disable wasm-opt — the bundled wasm-opt doesn't support the
# bulk-memory ops that newer rustc/llvm emit for large crypto
# routines (threshold_encrypt). Without this, `wasm-pack build
# --release` aborts mid-optimisation. We lose a few % of size
# reduction; correctness is unaffected.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
# Used only by the parity test in `src/lib.rs` — confirms the WASM-
# inlined EncryptedTx wire format decodes cleanly with the canonical
# rust-sdk inlined decoder. If the two inlined copies ever drift,
# this test fails loudly instead of the drift manifesting as silent
# wallet breakage.
pyde-rust-sdk = { path = "../rust-sdk" }

[package.metadata.cargo-machete]
# getrandom_03 / getrandom_04 are pulled in to enable the `wasm_js`
# feature on whichever getrandom version the transitive PQ-crypto deps
# resolve to. They're feature-flag enablers, never referenced directly.
ignored = ["getrandom", "getrandom_03", "getrandom_04"]
